# pil_overlay_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Overlay/: CMakeLists.txt  d3d_hook.cpp  d3d_hook.hpp  d3d_pch.hpp  overlay.cpp  pch.hpp
Overlay/Core/: layer.hpp  layer_stack.cpp  layer_stack.hpp
Overlay/MenuLayer/: imgui_layer.cpp  imgui_layer.hpp  log_layer.cpp  log_layer.hpp  menu_layer.cpp  menu_layer.hpp
Overlay/NetworkLayer/: boost.hpp  census_api.cpp  census_api.hpp  network_layer.cpp  network_layer.hpp  root_certificates.h  uri.hpp  websocket.cpp  websocket.hpp
Overlay/Planetside/: player.hpp  team.hpp
Overlay/WebSockets/: root_certificates.h  uri_parser.h  websocket.cpp  websocket.hpp
Overlay/imgui/: imgui_impl_win32.cpp  imgui_widgets.cpp
directx_test_window/: CMakeLists.txt  directx_test_window.rc  main.cpp  resource.h
